;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.3.19:
  * optimization: a valueless &AUX binding in a BOA constructor does not
    force all slots reads in safe code to perform a full type check.
  * bug fix: the low-level debugger would erroneously print - or not print
    as the case may be - "(bad-address)" for some objects depending whether
    the --dynamic-space-size argument was used at Lisp startup
  * bug fix: a DEFCONSTANT with a non non-eql-comparable object as the value
    could cause miscompilation if that constant appeared as the default
    expression for an &OPTIONAL binding

changes in sbcl-1.3.19 relative to sbcl-1.3.18:
  * enhancement: specialized arrays can be printed readably without using
    *read-eval*
  * enhancement: SB-DEBUG:PRINT-BACKTRACE truncates huge string arguments.
    The full string remains available for inspection via (SB-DEBUG:ARG).
  * bug fix: backtracing from several threads at once could fail
  * bug fix: floating-point infinities could not be used as keys
    in EQUALP hash tables. (lp#1696274)
  * bug fix: random sb-fasteval failures. (lp#1642708)
  * bug fix: align the stack in callback wrappers to defend against C
    compiler over-aggressive use of SIMD.  (lp#1697528)
  * bug fix: don't try to find the class when reporting that a class does
    not exist for a primitive type.  (lp#1697226) 

changes in sbcl-1.3.18 relative to sbcl-1.3.17:
  * minor incompatible change: existing values of CFLAGS, ASFLAGS,
    CPPFLAGS, and LINKFLAGS will be incorporated into C compiler
    invocations when building from source.
  * minor incompatible change: the result of WRITE-TO-STRING may be
    a BASE-STRING if all characters written are of type BASE-CHAR.
  * minor incompatible change: the broadcast stream with no output
    streams is a singleton object. That object satisfies OPEN-STREAM-P
    regardless of how many times CLOSE is invoked on it.