@@ -1935,6 +1935,8 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "SUB-GC"
                "SYMBOL-TLS-INDEX"
                "SYMBOLS-DESIGNATOR"
+               "SYMEVAL"
+               "SYM-GLOBAL-VAL"
                "%INSTANCE-LENGTH"
                "%INSTANCE-REF"
                "%INSTANCE-SET"
