@@ -41,19 +41,6 @@
                              (the ,type ,new)))
                 `(,op ,instance))))))
 
-;;; FIXME: the generated code for CAS on a defglobal contains a
-;;; use of UNBOUND-SYMBOL-ERROR. This is is not unique to CAS, viz.:
-;;; * (defglobal *ggg* 3)
-;;; * (disassemble '(lambda () (symbol-value '*ggg*)))
-;;;   ...
-;;;   ; 98: L0:   CC0A             BREAK 10                         ; error trap
-;;;   ; 9A:       06               BYTE #X06                        ; UNBOUND-SYMBOL-ERROR
-;;;   ; 9B:       00               BYTE #X00                        ; RAX
-;;; whereas evaluating the atom *GGG* is perfectly fine.
-;;; In fact not only is the unbound check emitted, so is the TLS value check,
-;;; but there's no CAS expander for SYMBOL-GLOBAL-VALUE, so we can't
-;;; macroexpand ATOMIC-PUSH into (CAS (SYMBOL-GLOBAL-VALUE ...))
-
 (defun get-cas-expansion (place &optional environment)
   "Analogous to GET-SETF-EXPANSION. Returns the following six values:
 
