@@ -107,7 +107,7 @@
 
 ;;; This is not FLUSHABLE, since it's required to signal an error if
 ;;; unbound.
-(defknown (symbol-value) (symbol) t ()
+(defknown (symbol-value symeval) (symbol) t ()
   :derive-type #'symeval-derive-type)
 (defknown about-to-modify-symbol-value (symbol t &optional t t) null
   ())
@@ -1592,7 +1592,7 @@
 
 ;;;; miscellaneous extensions
 
-(defknown symbol-global-value (symbol) t ()
+(defknown (symbol-global-value sym-global-val) (symbol) t ()
   :derive-type #'symeval-derive-type)
 (defknown set-symbol-global-value (symbol t) t ()
   :derive-type #'result-type-last-arg)
