@@ -82,11 +82,11 @@
 (define-vop (fast-symbol-global-value cell-ref)
   (:variant symbol-value-slot other-pointer-lowtag)
   (:policy :fast)
-  (:translate symbol-global-value))
+  (:translate sym-global-val))
 
 (define-vop (symbol-global-value)
   (:policy :fast-safe)
-  (:translate symbol-global-value)
+  (:translate sym-global-val)
   (:args (object :scs (descriptor-reg) :to (:result 1)))
   (:results (value :scs (descriptor-reg any-reg)))
   (:vop-var vop)
@@ -228,7 +228,7 @@
   ;; With Symbol-Value, we check that the value isn't the trap object. So
   ;; Symbol-Value of NIL is NIL.
     (define-vop (symbol-value)
-      (:translate symbol-value)
+      (:translate symeval)
       (:policy :fast-safe)
       (:args (symbol :scs (descriptor-reg constant) :to (:result 1)))
       (:temporary (:sc descriptor-reg) symbol-reg)
@@ -275,7 +275,7 @@
     ;; load the symbol except in the case of error, and uses no temp either.
     ;; There's no way to express the lack of encumbrances in the general vop.
     (define-vop (symeval/static-wired)
-      (:translate symbol-value)
+      (:translate symeval)
       (:policy :fast-safe)
       ;; The predicates are orthogonal. Symbols can satisfy one, the other,
       ;; both, or neither. This vop applies only if both.
@@ -327,9 +327,9 @@
 #!-sb-thread
 (progn
   (define-vop (symbol-value symbol-global-value)
-    (:translate symbol-value))
+    (:translate symeval))
   (define-vop (fast-symbol-value fast-symbol-global-value)
-    (:translate symbol-value))
+    (:translate symeval))
   (define-vop (set %set-symbol-global-value))
   (define-vop (boundp)
     (:translate boundp)
