@@ -3,6 +3,7 @@
 changes relative to sbcl-1.3.19:
   * optimization: a valueless &AUX binding in a BOA constructor does not
     force all slots reads in safe code to perform a full type check.
+  * optimization: ATOMIC-PUSH and ATOMIC-POP generate better code
   * bug fix: the low-level debugger would erroneously print - or not print
     as the case may be - "(bad-address)" for some objects depending whether
     the --dynamic-space-size argument was used at Lisp startup
